# iRobot

./: .gitignore  CMakeLists.txt  README.md  tags
CMake/: InstallDLL.cmake
CMake/Templates/: VisualStudio2010UserFile.vcxproj.user.in  VisualStudioUserFile.vcproj.user.in  plugins.cfg.in  plugins_d.cfg.in  resources.xml.in
CMake/Utils/: FindPkgMacros.cmake
Media/: registry.xml  resources.xml  robot.icns  zh_CN.xml
Media/Builder/: builder.xml
Media/Builder/gui/: toolbar_images.xml
Media/Builder/layout/: builder_about.layout  builder_menubar.layout
Media/Builder/lua/: builder.lua  main.lua
Media/Builder/material/: Test.material
Media/Core/layout/: Options.layout  tool_translate.layout  yesno.layout
Media/Core/lua/: console.lua  errorhandle.lua  init.lua  mygui.lua  options.lua  tool_gettext.lua  utility.lua
Media/Core/lua/socket/: ftp.lua  http.lua  luamime.lua  luasocket.lua  tp.lua  url.lua
Media/Core/mygui/: MyGUI_BlackBlueImages.xml  MyGUI_BlackBlueSkins.xml  MyGUI_BlackBlueTemplates.xml  MyGUI_BlackBlueTheme.xml  MyGUI_BlackOrangeImages.xml  MyGUI_BlackOrangeSkins.xml  MyGUI_BlackOrangeTemplates.xml  MyGUI_BlackOrangeTheme.xml  MyGUI_BlueWhiteImages.xml  MyGUI_BlueWhiteSkins.xml  MyGUI_BlueWhiteTemplates.xml  MyGUI_BlueWhiteTheme.xml  MyGUI_Core.xml  MyGUI_Fonts.xml  MyGUI_Fonts_cn.xml  MyGUI_Images.xml  MyGUI_Settings.xml
Media/Hotkey/: builder.xml
Media/Layout/: MainMenu.layout  Material.layout  OpenSaveDialog.layout  TestGeometry.layout  error.layout  t000  test.layout  testRigid.layout  testSkin.layout
Media/Lua/: builder.lua  console.lua  errorhandle.lua  init.lua  main.lua  test.lua  testRigid.lua  testStage.lua  testskin.lua  tool_gettext.lua  utility.lua
Media/Lua/socket/: ltn12.lua  smtp.lua
Media/MyGUI_Media/: MyGUI_BlackOrangeSkins.xml  MyGUI_BlackOrangeTemplates.xml  MyGUI_BlueWhiteSkins.xml  MyGUI_BlueWhiteTemplates.xml  MyGUI_Core.xml  MyGUI_Fonts_cn.xml
Media/Svg/: toolbar_images.xml
Media/Test/: Test.material
Media/Themes/: MyGUI_BlackBlueTemplates.xml  MyGUI_BlackOrangeSkins.xml  MyGUI_BlackOrangeTemplates.xml
include/: BaseManager.h  CameraControlet.h  ClassInfo.h  Console.h  Controlet.h  Factory.h  Framework.h  Game.h  Geometry.h  GeometryObject.h  HotkeyManager.h  Input.h  InputFilter.h  InputFocusInfo.h  Joint.h  JointGroup.h  Log.h  LuaBind.h  LuaControlet.h  LuaExport.h  LuaHotkey.h  LuaManager.h  Main.h  MainMenu.h  Math3d.h  ObjectFactory.h  Physica.h  PointerManager.h  Registry.h  Rigid.h  RigidControlet.h  RigidManager.h  RigidTool.h  RigidToolManager.h  SimpleUI.h  Stage.h  StatisticInfo.h  StringUtility.h  TestStage.h  VisualObject.h  (+3 more)
include/mac/: InputConverter.h  InputManager.h
include/ois/: InputManager.h
include/win32/: InputConverter.h  InputManager.h
misc/: BUILD.txt  Configure.txt  EditTextManager.cpp  EditTextManager.h  Hotkey.cnx  Info.plist  LuaDebug.cnx  MyGUI_ResourceDynamicFont.h  ResourceDynamicFont.cpp  iRobot.cnx  iRobotLua.cnx  lua5.1.cnx  luaMat.cnx  lua_global.cnx  luagui.cnx  luarRegistry.cnx  luarigid.cnx  ode.txt  svn.cnx
misc/Document/: Linear-Time Dynamics using Lagrange Multipliers.docx  怎样在ODE中实现一个铰链.docx  无约束刚体动力学.docx
misc/Document/ODE/: FAQ.docx  Open Dynamics Engine.docx
misc/Document/Physic/: gdxt.doc
src/: BaseManager.cpp  CameraControlet.cpp  Console.cpp  Controlet.cpp  Factory.cpp  Framework.cpp  Game.cpp  Geometry.cpp  GeometryObject.cpp  HotkeyManager.cpp  InputFilter.cpp  Joint.cpp  JointGroup.cpp  LuaBind.cpp  LuaCamera.cpp  LuaControlet.cpp  LuaGame.cpp  LuaGettext.cpp  LuaGui.cpp  LuaHotkey.cpp  LuaManager.cpp  LuaMat.cpp  LuaRegistry.cpp  LuaRigid.cpp  LuaXml.cpp  Main.cpp  MainMenu.cpp  Math3d.cpp  ObjectFactory.cpp  Physica.cpp  PointerManager.cpp  Registry.cpp  Rigid.cpp  RigidControlet.cpp  RigidManager.cpp  RigidTool.cpp  RigidToolManager.cpp  SimpleUI.cpp  StringUtility.cpp  TestStage.cpp  (+4 more)
src/mac/: InputManager.mm
src/ois/: InputManager.cpp
src/win32/: InputManager.cpp
tools/debuger/: README.txt  debuger.lua  luadebug.vim  patch 7.3.806.diff  patch 7.4.52.diff  vim_debuger.c
tools/luaDebug Plugins NotePad++/: LuaDebug.cpp  LuaDebug.h  NppPluginDemo.cpp  NppPluginTemplate.sln  NppPluginTemplate.vcproj  PluginDefinition.cpp  PluginDefinition.h  UpgradeLog.XML  mobdebug.cpp  mobdebug.h  utf8.cpp  utf8.h
tools/luaDebug Plugins NotePad++/ANSI Debug/: BuildLog.htm
tools/luaDebug Plugins NotePad++/LuaDebug/: LuaDebug.sln  UpgradeLog.XML  UpgradeLog.htm
tools/luaDebug Plugins NotePad++/LuaDebug/Backup/: LuaDebug.sln
tools/luaDebug Plugins NotePad++/LuaDebug/LuaDebug/: LuaDebug.vcproj  LuaDebug.vcxproj  LuaDebug.vcxproj.filters
tools/luaDebug Plugins NotePad++/LuaDebug/LuaDebug/Debug/: LuaDebug.lastbuildstate
tools/luaDebug Plugins NotePad++/LuaDebug/LuaDebug/Release/: LuaDebug.lastbuildstate
